# gen_tty

./: .gitignore  CMakeLists.txt  cmake.sh  gen_tty_proto.config  generate_proto_headers.escript  rebar.config  rebar3
c_src/: gen_tty.h  gen_tty_drv.c  utils.c  utils.h
c_src/linux/: baud_rate.c  baud_rate.h  gen_tty_impl.c
src/: gen_tty.app.src  gen_tty.erl
test/: gen_tty_SUITE.erl  gen_tty_test_utils.erl
